<resources>
    <string name="app_name">YouArt</string>
    <string name="email_field">E-Mail</string>
    <string name="button_login">Log In</string>
    <string name="no_account">Don\'t have an account?</string>
    <string name="sign_up">Sign up.</string>
    <string name="youart">YouArt</string>
    <string name="password">Password</string>
    <string name="user_name">User Name</string>
    <string name="register">Register</string>
    <string name="title_activity_main2">MainActivity2</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="string_description">Description</string>
    <string name="string_safe">Save</string>
    <string name="upload_post_txt">Upload your post or video</string>
    <string name="create_post_btn">Create a post</string>
    <string name="upload_title_txt">Upload your avatar</string>
    <string name="fullname_edt">Full Name</string>
    <string name="confirm_password_edt">Confirm Password</string>
    <string name="register_btn">Register</string>
    <string name="email_edt">Email</string>
    <string name="password_edt">Password</string>
    <string name="ella_txt">Ella</string>
    <string name="follow_txt">Follow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="startBidVal">starting at ...</string>
    <string name="expireDate">Date of Expiry</string>
    <string name="crAuction_btn">Create Auction</string>
    <string name="auctionMessage_edt">Auction Describtion</string>
    <string name="upload_sub_img">Upload your Art</string>
    <string name="auctionTitile_edt">Auction Title</string>
    <string name="bid_btn">Bid</string>
    <string name="text_place_bid">Place Bid</string>
    <string name="txt_cur_Price">Current Price:</string>
    <string name="txt_expires">expires in:</string>
</resources>