<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:orientation="vertical">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/white"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginRight="16dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:weightSum="4">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical">

                <ImageView
                    android:id="@+id/backIv"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginBottom="2dp"
                    android:src="@drawable/arrow_back" />
            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="124dp"
                    android:layout_height="124dp"
                    android:layout_marginTop="4dp"
                    android:src="@drawable/logo" />
            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right">

                    <ImageView
                        android:id="@+id/chatIv"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_gravity="right"
                        android:layout_marginRight="8dp"
                        android:layout_marginBottom="2dp"
                        android:src="@drawable/chat" />

                    <ImageView
                        android:id="@+id/logoutIv"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_gravity="right"
                        android:layout_marginBottom="2dp"
                        android:src="@drawable/power_off" />
                </LinearLayout>
            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingTop="56dp"
        android:paddingRight="20dp">
        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/uploadContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/white"
            android:orientation="vertical">
        <ImageView
            android:id="@+id/auctionImageIv"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:src="@drawable/image_gallery" />

        <TextView
            android:id="@+id/auctionImgTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingBottom="10dp"
            android:text="@string/upload_sub_img"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />
        </androidx.appcompat.widget.LinearLayoutCompat>


        <EditText
            android:id="@+id/auctionMessage"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/input"
            android:hint="@string/auctionMessage_edt"
            android:inputType="textEmailAddress"
            android:padding="10dp" />

        <EditText
            android:id="@+id/startBid"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/input"
            android:hint="@string/startBidVal"
            android:inputType="number|numberDecimal"
            android:padding="10dp" />


        <EditText
            android:id="@+id/expireDate"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/input"
            android:hint="@string/expireDate"
            android:inputType="date"
            android:padding="10dp" />

        <Button
            android:id="@+id/createAuctionBtn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/login_btn"
            android:text="@string/crAuction_btn"
            android:textColor="@color/white" />

    </LinearLayout>

</LinearLayout>