<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".AuctionItemFragment">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/item_nBids"
                    android:layout_width="82dp"
                    android:layout_height="29dp"
                    android:layout_marginTop="4dp"
                    android:background="@null"
                    android:cursorVisible="false"
                    android:editable="false"
                    android:ems="10"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:inputType="number"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.951"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/item_AuctionTitle"
                    tools:text="nBids" />

                <ImageView
                    android:id="@+id/item_auctionItemPicture"
                    android:layout_width="294dp"
                    android:layout_height="249dp"
                    android:layout_marginTop="24dp"
                    android:src="@drawable/ic_baseline_camera_enhance"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.495"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/item_AuctionTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/item_auctionItemPicture"
                    tools:text="Auction Title" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/constraintLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/item_nBids"
                    tools:layout_editor_absoluteX="0dp">

                    <ImageView
                        android:id="@+id/item_profileView"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/ic_user" />

                    <TextView
                        android:id="@+id/item_auctionAuthor"
                        android:layout_width="306dp"
                        android:layout_height="41dp"
                        android:layout_marginStart="33dp"
                        android:maxLines="4"
                        android:textSize="20sp"
                        android:gravity="center_vertical"
                        app:layout_constrainedWidth="true"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toEndOf="@+id/item_profileView"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.533"
                        tools:text="by Post Author" />


                </androidx.constraintlayout.widget.ConstraintLayout>

                <TextView
                    android:id="@+id/item_Message"
                    android:layout_width="219dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="96dp"
                    android:layout_marginTop="16dp"
                    android:maxLines="2"
                    android:textSize="16sp"
                    app:layout_constrainedWidth="true"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
                    tools:text="Hi! This is body" />

                <EditText
                    android:id="@+id/item_timeToGo"
                    android:layout_width="106dp"
                    android:layout_height="48dp"
                    android:layout_marginTop="36dp"
                    android:background="@null"
                    android:cursorVisible="false"
                    android:editable="false"
                    android:ems="10"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:inputType="number"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/item_currentTimeToGoTxT"
                    app:layout_constraintTop_toBottomOf="@+id/item_Message" />

                <EditText
                    android:id="@+id/item_currentPriceTxt"
                    android:layout_width="191dp"
                    android:layout_height="45dp"
                    android:layout_marginStart="40dp"
                    android:layout_marginTop="48dp"
                    android:background="@null"
                    android:cursorVisible="false"
                    android:editable="false"
                    android:ems="10"
                    android:focusable="false"
                    android:gravity="right"
                    android:focusableInTouchMode="false"
                    android:inputType="none"
                    android:text="@string/txt_cur_Price"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/item_currentTimeToGoTxT" />

                <EditText
                    android:id="@+id/item_currentTimeToGoTxT"
                    android:layout_width="191dp"
                    android:layout_height="45dp"
                    android:layout_marginStart="40dp"
                    android:layout_marginTop="36dp"
                    android:background="@null"
                    android:cursorVisible="false"
                    android:editable="false"
                    android:ems="10"
                    android:focusable="false"
                    android:gravity="right"
                    android:focusableInTouchMode="false"
                    android:inputType="none"
                    android:text="@string/txt_expires"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/item_Message" />

                <EditText
                    android:id="@+id/item_auctionPrice"
                    android:layout_width="94dp"
                    android:layout_height="36dp"
                    android:layout_marginTop="44dp"
                    android:background="@null"
                    android:cursorVisible="false"
                    android:editable="false"
                    android:ems="10"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:inputType="numberSigned"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.412"
                    app:layout_constraintStart_toEndOf="@+id/item_currentPriceTxt"
                    app:layout_constraintTop_toBottomOf="@+id/item_timeToGo" />

                <Button
                    android:id="@+id/bid_button"
                    android:layout_width="195dp"
                    android:layout_height="66dp"
                    android:layout_marginTop="24dp"
                    android:background="@drawable/bid_button"
                    android:radius="30dp"
                    android:text="@string/bid_btn"
                    android:textSize="24sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/item_currentPriceTxt" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>
</ScrollView>